# plex_delete_media

./: README.md  main.py  prospector.yaml  pyproject.toml
data/: movies_to_delete.csv
results/2021_12_27/: all_deleted.txt  movies_deleted.json  movies_not_found.json
