[tool.poetry]
name = "plex_delete_media"
version = "0.1.0"
description = ""
authors = ["Daniel Tomlinson <dtomlinson@panaetius.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
arrapi = "^1.3.0"
panaetius = "^2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
prospector = "^1.5.3"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
